# curs-1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README-Cpp.md  vcpkg.json
src/: OpcUaClient.cpp  OpcUaClient.h  mainwindow.cpp  mainwindow.h  opcua_client.cpp  opcua_client.h
src/ua/: IUaClient.h  MockUaClient.cpp  MockUaClient.h  Open62541Client.cpp  Open62541Client.h  UaTypes.h
test/: test_opcua_client.cpp
